# ml-research-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE.md  README.md  dvc.yaml  pyproject.toml  setup.md
.cursor/agents/: README.md  autonomous_controller.md  devils_advocate.md  editor_in_chief.md  ethics_reviewer.md  experiment_runner.md  hypothesis_generator.md  implementation_reviewer.md  intake_agent.md  integrity_auditor.md  literature_scout.md  manuscript_writer.md  methodology_critic.md  peer_reviewer_r1.md  peer_reviewer_r2.md  peer_reviewer_r3.md  pipeline_orchestrator.md  research_manager.md  results_analyst.md  revision_coach.md  source_verifier.md  synthesis_agent.md
.cursor/rules/: benchmarks.mdc  epistemic.mdc  experiments.mdc  git-safety.mdc  paper-code-consistency.mdc  pipeline-mode.mdc  plan-first.mdc  project.mdc  python.mdc  research-integrity.mdc  scope-discipline.mdc  secrets.mdc
configs/: eval.yaml  train.yaml
configs/datamodule/: synthetic.yaml
configs/experiment/: synthetic_demo.yaml
configs/hydra/: default.yaml
data/: README.md
docs/: REFERENCES.md
references/: README.md
reports/: README.md
research/: README.md  decision_log.md  experiment_provenance.yaml  hypotheses.yaml  methodology.md  passport.yaml  pipeline.yaml  pipeline_profiles.yaml  research_state.yaml
scripts/: generate_playbooks.py  integrity_check.py  link_playbooks.py  orchestrate_pipeline.py  validate_benchmark.py  validate_pipeline.py  validate_research.py
src/: config.py  dataset.py  eval.py  train.py
tests/: test_integrity.py
(+63 files in other folders)
