[project]
name = "ml-research-template"
version = "0.1.0"
description = "ML research template: CCDS + Hydra + modular AI research pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "numpy>=1.26",
]
wandb = [
    "wandb>=0.16",
]
ml = [
    "torch>=2.0",
    "wandb>=0.16",
    "numpy>=1.26",
]
mlflow = [
    "mlflow>=2.0",
]
lightning = [
    "lightning>=2.0",
    "torch>=2.0",
]
dvc = [
    "dvc>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
